# arrow-git

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: performance_gates.rs
examples/: basic_workflow.rs  branch_merge.rs  crash_recovery.rs
src/: blame.rs  checkout.rs  cherry_pick.rs  commit.rs  compat.rs  diff.rs  lib.rs  merge.rs  object_store.rs  rebase.rs  remote.rs  revert.rs  save.rs
tests/: cross_crate_test.rs  delta_spike.rs  integration_test.rs  lifecycle_test.rs  parquet_interop.rs  performance_gates.rs  stress_test.rs
tests/common/: mod.rs
