[package]
name = "arrow-graph-git"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/hankh95/arrow-git"
description = "Graph-native git primitives on Arrow RecordBatches — commit, checkout, merge, diff, blame, rebase"
readme = "README.md"
keywords = ["arrow", "git", "graph", "version-control", "knowledge-graph"]
categories = ["database", "data-structures"]

[dependencies]
arrow-graph-core = "0.1"
arrow = { version = "55", features = ["prettyprint"] }
parquet = { version = "58", features = ["arrow"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
thiserror = "2"
bytes = "1"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance_gates"
harness = false

[[example]]
name = "basic_workflow"

[[example]]
name = "branch_merge"

[[example]]
name = "crash_recovery"
